feat: implement mathematical brain for scoring and optimize card drawing